# pegasus-docs

./: .gitignore  CLAUDE.md  README.md  ai.rst  apis.md  astro.config.mjs  async.md  celery.md  community.rst  conf.py  configuration.md  cookbooks.md  css.rst  customizations.md  docker.md  experimental.rst  front-end.md  front-end.rst  getting-started.md  github.md  index.rst  internationalization.md  marketplace.md  marketplace.rst  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-notes.md  subscriptions.md  teams.md  todo.md  upgrading.md
.github/workflows/: ci.yml
_templates/: base.html
ai/: development.md  images.md  llms.md  overview.md
community/: digital-ocean-spaces.md
css/: bootstrap.md  file-structure.md  material.md  overview.md  tailwind.md
deployment/: digital-ocean.md  kamal.md  overview.md  production-checklist.md
docs/: apis.md  async.md  celery.md  code-structure.md  configuration.md  cookbooks.md  customizations.md  docker.md  flags.md  getting-started.md  github.md  index.md  internationalization.md  page-metadata.md  payments.md  release-notes.md  subscriptions.md  templates.md  upgrading.md  wagtail.md
docs/ai/: index.md  llms.md
docs/community/: digital-ocean-spaces.md  index.md
docs/css/: bootstrap.md  bulma.md  file-structure.md  material.md  overview.md  tailwind.md
experimental/: react-front-end.md
front-end/: design-patterns.md  migrating.md  overview.md  troubleshooting.md  vite.md  webpack.md
marketplace/: connecting.md  scriv.md
public/: robots.txt
python/: uv.md
src/: config.ts
(+128 files in other folders)
