[project]
name = "pegasus-docs"
version = "0.1.0"
description = "Documentation for SaaS Pegasus - the Django SaaS boilerplate"
authors = [
    {name = "SaaS Pegasus", email = "support@saaspegasus.com"},
]
dependencies = [
    "mkdocs-material>=9.4.0",
    "mkdocs-redirects",
    "mkdocs-minify-plugin",
    "pymdown-extensions",
]
